# BAH_FPS_CODE

./: BAH_and_FPS.py  README.md  pyproject.toml  requirements.txt  setup.py
src/: FPS.py
src/BAH_FPS/: FPS.py  functions.py
src/BAH_FPS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/bah_fps.egg-info/: PKG-INFO  SOURCES.txt
test/.ipynb_checkpoints/: FPS_from_coords-checkpoint.ipynb
test/testset/: coord_PTSD_19444.xsf  coord_PTSD_19445.xsf  coord_PTSD_19446.xsf  coord_PTSD_19447.xsf  coord_PTSD_19448.xsf  coord_PTSD_19449.xsf  coord_PTSD_19450.xsf  coord_PTSD_19451.xsf  coord_PTSD_19452.xsf  coord_PTSD_19453.xsf  coord_PTSD_19454.xsf  coord_PTSD_19455.xsf  coord_PTSD_19456.xsf  coord_PTSD_19457.xsf  coord_PTSD_19458.xsf  coord_PTSD_19459.xsf  coord_PTSD_19460.xsf  coord_PTSD_19461.xsf  coord_PTSD_19462.xsf  coord_PTSD_19463.xsf  coord_PTSD_19464.xsf  coord_PTSD_19465.xsf  coord_PTSD_19466.xsf  coord_PTSD_19467.xsf  coord_PTSD_19468.xsf  coord_PTSD_19469.xsf  coord_PTSD_19470.xsf  coord_PTSD_19471.xsf  coord_PTSD_19472.xsf  coord_PTSD_19473.xsf  coord_PTSD_19474.xsf  coord_PTSD_19475.xsf  coord_PTSD_19476.xsf  coord_PTSD_19477.xsf  coord_PTSD_19478.xsf  coord_PTSD_19479.xsf  coord_PTSD_19480.xsf  coord_PTSD_19481.xsf  coord_PTSD_19482.xsf  coord_PTSD_19483.xsf  (+110 more)
