[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BAH_FPS"
version = "0.1.0"
description = "BAH_FPS Package"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
# CLI scripts go here if needed
